WebHelpers ChangeLog
====================

tip (development version)
-------------------------
* webhelpers.constants:
  - Fix spelling of Massachusetts.
* webhelpers.html:
  - New ``HTML.cdata()`` method for producing "<!![CDATA[ ... ]]>" sections.
* webhelpers.html.tags:
  - Set magic ID attribute in ``hidden`` helper to match behavior of the other
    tag helpers.
  - ``image()`` can now calculate the width and height automatically
    from an image file, using either the PIL algorithm or the pure Python
    algorithm in ``webhelpers.media``. It also logs the dimensions to the
    debug log for troubleshooting.
* webhelpers.html.tools:
  - Reimplement ``highlight()`` using the HTML builder. New arguments add
    flexibility.  Deprecate the ``highlighter`` argument, which creates tags
    via string interpolation.
  - Fix HTML overescaping and underescaping in auto_link().  Patch by Marius
    Gedminas.  A parsing bug remains: 
    http://pylonshq.com/project/pylonshq/ticket/657
* webhelpers.markdown / webhelpers.html.converters:
  - Deprecate ``webhelpers.markdown``, which is Markdown 1.7 without its
    extensions. Users can upgrade to Markdown 2 in PyPi, or use the alternative
    Markdown2 package. The ``markdown()`` helper in
    ``webhelpers.html.converters`` now takes a ``markdown`` argument to specify
    which implementation to use, or it will attempt to import ``markdown``, or
    else fall back to ``webhelpers.markdown`` (with a deprecation warning).
* webhelpers.media:
  - Bugfix in ``get_dimensions_pil``.
* webhelpers.paginate:
  - Change for SQLAlchemy 0.6. (bug #11)
* webhelpers.pylonslib:
  - Fix HTML overescaping.  Patch by Marius Gedminas.
* webhelpers.tools:
  - Reimplement ``highlight`` using HTML builder. Deprecate ``highlighter`` 
    argument. Allow search phrase to be a string, a list of strings, or a 
    regular expression. Add ``case_sensitive``, ``class_``, and ``**attrs``
    arguments.


1.0b1 (2009-11-20)
------------------